--- a/Front - Proyecto/src/Usuario/Publicaciones.html
+++ b/Front - Proyecto/src/Usuario/Publicaciones.html
@@ -212,16 +212,16 @@
                     </div>
                 </a>
                 <div class="flex justify-around items-center mb-2">
-                    <div class="flex">
+                    <div class="flex items-center">
                         <div class="flex items-center">
-                            <button id="1" onclick="DarLike('1')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="md:h-6 md:w-6 md:ml-8 xl:h-6 xl:w-6 xl:ml-8 h-5 lg:ml-0">
+                            <button id="1" class="w-6 lg:w-6 lg:h-6" onclick="DarLike('1')">
+                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="w-5 h-5 lg:w-6 lg:h-6">
                             </button>
-                            <span class="textito font-bold text-[#241111] xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px] ml-2">35</span>
+                            <span class="textito font-bold text-[#241111] xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px] ml-1">35</span>
                         </div>
-                        <div class="flex">
-                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 md:ml-8 lg:ml-6 ml-6">
-                            <span class="textito font-bold text-[#241111] ml-2 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">11</span>
+                        <div class="flex items-center">
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/chat-alt-2.png?raw=true" class="md:h-6 md:w-6 h-5 md:ml-8 lg:ml-2 ml-6">
+                            <span class="textito font-bold text-[#241111] ml-1 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px]">11</span>
                         </div>
                         <span class="textito font-bold text-[#241111] md:ml-8 ml-9 xl:text-sm md:text-[14px] lg:text-[10px] text-[10px] mt-[2px]">Nombre Científico: Nasua</span>
                         <span class="textito font-bold text-[#241111] ml-8 lg:text-[10px] xl:text-sm md:text-[14px] text-[10px] mt-[2px] lg:mr-0 xl:mr-10 mr-10">Animal: Gato solo</span>
@@ -255,10 +255,10 @@
                     </div>
                 </a>
                 <div class="flex justify-around items-center mb-2">
-                    <div class="flex">
+                    <div class="flex items-center">
                         <div class="flex items-center">
-                            <button id="3" onclick="DarLike('3')">
-                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="md:h-6 md:ml-8 xl:h-6 xl:ml-8 w-6 h-5 lg:ml-0">
+                            <button id="3" class="w-6 lg:w-6 lg:h-6" onclick="DarLike('3')">
+                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/favorite.png?raw=true" class="w-5 h-5 lg:w-6 lg:h-6">
                             </button>
                             <span class="textito font-bold text-[#241111]ml-2 xl:text-sm md:text-[14px] xl:text-[14px] lg:text-[10px] text-[10px] md:mt-[2px] lg:mt-[4px] mt-[4px] ml-2">35</span>
                         </div>
