--- a/Front - Proyecto/src/Usuario/Comentarios.html
+++ b/Front - Proyecto/src/Usuario/Comentarios.html
@@ -198,7 +198,7 @@
                 <div class="mb-5 ml-2 mr-2 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px]">
                     <div class="">
                         <span class="textito font-semibold ml-0 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">Comentaste:</span>
-                        <span class="textito text-gray-400 md:ml-10 lg:mr-0 md:mr-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">2024/01/25</span>
+                        <span class="textito text-gray-400 ml-10 md:mr-6 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">2024/01/25</span>
                         <div class="relative inline-block float-right" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false"> <!--Menú desplegable implementando lógica de Framework Alpine.js-->
                             <button class="-mt-3" @click="open = !open">
                                 <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true" alt="">
@@ -217,14 +217,12 @@
                 </div>
                 <button class="ml-2 mr-2">
                     <div class="mt-2 mb-2 border-slate-300 border-[1.5px] rounded-md max-w-[40rem]">
-                        <a href="#oso" class="">
+                        <a href="#oso" class="text-left">
                             <div class="mt-2">
-                                <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">UsuarioPromedioFisc</span>
+                                <span class="textito font-bold text-[#241111] ml-2 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">UsuarioPromedioFisc</span>
                                 <span class="textito text-gray-400 ml-2 md:ml-4 lg:ml-2 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/13</span>
                                 <span class="textito text-gray-400 float-right xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1 xl:ml-10 xl:mr-10 lg:mr-0">Campus Levi Sasso</span>
-                                <article class="text-balance">
-                                    <p class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 mt-2 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[13px]"> Me encontré a este pequeño en los senderos de la UTP. ¿No es lindo?</p>
-                                </article>
+                                <p class="textito font-bold text-[#241111] xl:mr-10 ml-2 xl:text-sm lg:text-[12px] md:text-[14px] text-[13px]"> Me encontré a este pequeño en los senderos de la UTP. ¿No es lindo?</p>
                             </div>
                         </a>
                     </div>
