Editar titulo de publicacion listo
Esto se puede observar en la primara publicación de inicio del usuario

--- a/Front - Proyecto/src/Administrativo/VerificarBiologo.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo.html
@@ -44,27 +44,57 @@
         background-color: #403d3d;
     }
 
-    .tooltip {
-    opacity: 0;
-    transition: opacity 0.3s;
-    }
-
-    .relative:hover .tooltip {
-    opacity: 1;
-    }
     /*sm=640px md=768px lg=1024px xl=1280px 2xl=1536px*/
     @media only screen and (min-width: 1280px) and (max-width: 1495.20px){
         #pub{
             width: 52%;
         }
     }
-    @media only screen and (min-width: 1024px){
-        
-    }
     @media only screen and (min-width: 1495.20px) and (max-width: 1536px){
         #pub{
             width: 59%;
             left: 8rem;
+        }
+    }
+
+    @media only screen and (min-height:530px ) and (max-height:720px){
+        #celu{
+            top: 38%;
+        }
+    }
+    @media only screen and (min-height:740px ) and (max-height:799px){
+        #celu{
+            top: 33%;
+        }
+    }
+    @media only screen and (min-height:800px ) and (max-height:840px){
+        #celu{
+            top: 34%;
+        }
+    }
+    @media only screen and (min-height:844px ) and (max-height:896px){
+        #celu{
+            top: 28%;
+        }
+    }
+    @media only screen and (min-height:900px ) and (max-height:1000px){
+        #celu{
+            top: 27%; 
+        }
+    }
+    @media only screen and (min-height:1024px ) and (max-height:1080px){
+        #celu{
+            top: 26%; 
+        }
+    }
+    @media only screen and (min-height:1180px ) and (max-height:1250px){
+        #celu{
+            top: 22%; 
+        }
+    }
+    @media only screen and (min-height:1366px ) and (max-height:1400px){
+        #celu{
+            top: 18%; 
         }
     }
     </style>
@@ -185,9 +215,9 @@
             </footer>
         </div>
     </aside>
-    <div class="bg-[#FFFFFF] flex flex-col lg:flex-row"> <!--Contenido completo-->                                                                                                                 <!--lg:w-[23rem] xl:w-[52%] xl:max-w-[58%] 2xl:min-w-[58%] 2xl:w-[60%]-->
-        <section id="pub" class="bg-[#F8F5F5] relative top-28 md:top-24 md:py-8 lg:top-[130px] w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:left-32 h-screen lg:h-auto justify-center"> <!--Publicaciones-->
-            <div class="flex justify-center mt-20 lg:mt-0 ">
+    <div class="bg-[#FFFFFF] flex flex-col lg:flex-row"> <!--Contenido completo-->   <!--top-28 md:top-24 md:py-8 lg:top-[130px] xl:top-0-->                                                                                                              <!--lg:w-[23rem] xl:w-[52%] xl:max-w-[58%] 2xl:min-w-[58%] 2xl:w-[60%]-->
+        <section id="pub" class="bg-[#F8F5F5] relative w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:left-32 h-screen justify-center"> <!--Publicaciones-->
+            <div class="relative flex justify-center top-48 md:top-52 lg:top-40 xl:top-44">
                 <table class="w-[80%] lg:w-[90%] border border-gray-300 rounded-lg overflow-hidden">
                     <tbody>
                         <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
@@ -195,7 +225,7 @@
                             <td>Solicitud para ser biologo verificado uwu</td>
                             <td>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button class="mt-2">
+                                    <button class="mt-2 ver-btn" onclick="showDetails()">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
@@ -225,7 +255,7 @@
                             <td>Solicitud para ser biologo verificado chi</td>
                             <td>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button class="mt-2">
+                                    <button class="mt-2 ver-btn" onclick="showDetails()">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
@@ -255,7 +285,7 @@
                             <td>Solicitud para ser biologo verificado chi</td>
                             <td>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button class="mt-2">
+                                    <button class="mt-2 ver-btn" onclick="showDetails()">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
@@ -289,7 +319,7 @@
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">
-                                        <span class="block w-9 px-2 py-1 text-xs font-semibold z-50">Ver</span>
+                                        <span class="block w-9 px-2 py-1 text-xs font-semibold">Ver</span>
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
@@ -304,19 +334,23 @@
                                     <button onclick="toggleEstado(this, 0)" class="rechazar">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
                                     </button>
-                                    <div class="absolute bg-white border rounded -ml-6" x-show="open" @click.away="open = false">
+                                    <div class="absolute bg-white border rounded -ml-6 overflow-visible z-50" x-show="open" @click.away="open = false">
                                         <span class="block w-[4rem] px-2 py-1 text-xs font-semibold">Rechazar</span>
                                     </div>
                                 </div>
                             </td>
                         </tr>
                     </tbody>
-                </table>
+                </table>  
             </div>
-            <div class="flex items-center ">
-                <div class=" w-[50%] lg:w-[90%] bg-[#FFFFFF] rounded-lg hidden">
+            <div id="celu" class="flex items-center justify-center relative">
+                <div class="w-[80%] lg:w-[90%] bg-[#FFFFFF] rounded-lg hidden">
                     <div class="flex p-4 ml-3">
-                        <button onclick="toggleEstado(this, 1)" class="aprobar flex bg-[#D7EFFF] p-2 rounded-md">
+                        <button onclick="Deshacer()" class="flex bg-[#D7EFFF] p-2 rounded-md">
+                            <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Regresar.png?raw=true" class="mr-1">
+                            Regresar
+                        </button>
+                        <button onclick="toggleEstado(this, 1)" class="aprobar flex bg-[#D7EFFF] ml-3 p-2 rounded-md">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true" class="mr-1">
                             Aprobar
                         </button>
@@ -328,7 +362,7 @@
                     <div class="flex justify-center">
                         <hr class="w-11/12">
                     </div>
-                    <div class="mt-2 ml-16 text-lg">
+                    <div class="mt-2 ml-10 lg:ml-16 text-lg">
                         <h2> Solicitud para ser biologo verificado uwu </h2>
                     </div>
                     <div class="flex mt-3 ml-6">
@@ -347,30 +381,29 @@
                     </div>
                 </div>
             </div>
-        </section>
-            
-        <section class="absolute lg:fixed lg:top-40 top-24 lg:w-64 w-full lg:right-36 lg:block">
-            <div class="bg-[#F0FEF8] mt-3 lg:rounded-[10px] p-2 lg:p-4 border-[1.5px] border-slate-300">
+        </section>  
+        <section class="fixed lg:top-40 top-24  lg:w-64 w-full lg:right-36 lg:block">
+            <div class="bg-[#F0FEF8] mt-3 md:mt-2 lg:mt-3 lg:rounded-[10px] p-2 lg:p-4 md:pb-3 border-[1.5px] border-slate-300">
                 <div class="flex justify-center">
                     <span class="text-lg hidden lg:block"> Bandeja de entrada</span>
                 </div>
-                <div class="ml-2 mt-2 w-full flex lg:block">
-                    <a href="">
-                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] p-1 lg:pl-3 w-[6rem] lg:w-[13rem]">
+                <div class="lg:ml-2 mt-[5px] lg:mt-2 w-full flex lg:block text-sm md:text-base justify-around md:justify-evenly lg:justify-normal">
+                    <a href="#" class="">
+                        <div class=" ml-2 lg:ml-0 flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6rem] md:w-[7rem] lg:w-[12rem]">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Recibido.png?raw=true" alt="icono-recibido" class="w-[20px] h-[20px] mt-[2px]">
-                            <p class="ml-2 lg:ml-3 text-sm md:text-base  mt-1 md:mt-0">Recibido</p>
+                            <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Recibido</p>
                         </div>
                     </a>
-                    <a href="#">
-                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] p-1 lg:pl-3 w-[6rem] lg:w-[13rem] ml-2 lg:ml-0">
+                    <a href="#" class="">
+                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px] mt-[2px]">
-                            <p class="ml-2 lg:ml-3 text-sm md:text-base  mt-1 md:mt-0">Aprobado</p>
+                            <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Aprobado</p>
                         </div>
                     </a>
-                    <a href="#">
-                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] p-1 lg:pl-3 w-[6rem] lg:w-[13rem] ml-4 lg:ml-0">
+                    <a href="#" class="">
+                        <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px] mt-[2px]">
-                            <p class="ml-2 lg:ml-3 text-sm md:text-base mt-1 md:mt-0">Desaprobado</p>
+                            <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Desaprobado</p>
                         </div>
                     </a>
                 </div>
