--- a/Front - Proyecto/src/Usuario/Comentarios.html
+++ b/Front - Proyecto/src/Usuario/Comentarios.html
@@ -76,10 +76,12 @@
             </div>
             
             <div class="flex justify-around items-center">
-                <a class="flex ml-2 p-2 hover:bg-[#47917c]" href="#">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="h-6 mt-1">
-                    <p class="text-[#FFFFFF] text-lg mt-[2px] ml-2 mr-4">Crear</p>
-                </a>
+                <button id="crearPub" id="crearPub" onclick="crearPublicacion('Publicaciones.html?mostrarPublicar=true')">
+                    <a class="flex ml-2 p-2 hover:bg-[#47917c]" href="#">
+                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="h-6 mt-1">
+                        <p class="text-[#FFFFFF] text-lg mt-[2px] ml-2 mr-4">Crear</p>
+                    </a>
+                </button>
                 <button id="mostrarPerfil">
                     <a href="">
                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/User_cicrle_light.png?raw=true" alt="user icon">
