--- a/Front - Proyecto/src/Usuario/Usuario - Inicio.html
+++ b/Front - Proyecto/src/Usuario/Usuario - Inicio.html
@@ -40,6 +40,9 @@
         content: '✕'; /* Icono para cerrar el aside */
     }
 
+    .menu li a.active {
+        background-color: #403d3d;
+    }
     /*sm=640px md=768px lg=1024px xl=1280px 2xl=1536px*/
     @media only screen and (min-width: 1280px) and (max-width: 1495.20px){
         #pub{
@@ -73,10 +76,12 @@
             </div>
             
             <div class="flex justify-around items-center">
-                <a class="flex ml-2 p-2 hover:bg-[#47917c]" href="#">
-                    <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="h-6 mt-1">
-                    <p class="text-[#FFFFFF] text-lg mt-[2px] ml-2 mr-4">Crear</p>
-                </a>
+                <button id="crearPub" id="crearPub" onclick="crearPublicacion('Publicaciones.html?mostrarPublicar=true')">
+                    <a class="flex ml-2 p-2 hover:bg-[#47917c]" href="#">
+                        <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/crear.png?raw=true" class="h-6 mt-1">
+                        <p class="text-[#FFFFFF] text-lg mt-[2px] ml-2 mr-4">Crear</p>
+                    </a>
+                </button>
                 <button id="mostrarPerfil">
                     <a href="">
                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/User_cicrle_light.png?raw=true" alt="user icon">
@@ -239,13 +244,33 @@
         </section>                                                                                                                 <!--lg:w-[23rem] xl:w-[52%] xl:max-w-[58%] 2xl:min-w-[58%] 2xl:w-[60%]-->
         <section id="pub" class="bg-[#F8F5F5] relative flex flex-col items-center top-32 md:top-24 md:py-8 lg:top-[130px] w-full lg:w-[41%] 2xl:min-w-[58%] 2xl:w-[60%] lg:ml-[5rem] xl:ml-[6rem] mr-5"> <!--Publicaciones-->
             <div id="nasua" class="bg-white p-4 sm:rounded-lg border-2 border-gray-300 mt-7 w-screen sm:w-9/12 lg:w-5/6">
-                <a href="/src/Publicacion.html">
-                    <div class="mt-2">
-                        <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">PepeGanga</span>
-                        <span class="textito text-gray-400 md:ml-6 ml-4 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/15</span>
-                        <span class="textito text-gray-400 float-right md:ml-10 lg:mr-0 md:mr-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">Campus Levi Sasso</span>
-                        <p class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px] mt-2">Me encontré un gato solo saliendo de la U. Se llama pansito</p>
+                
+                <div class="mt-2">
+                    <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">PepeGanga</span>
+                    <span class="textito text-gray-400 md:ml-6 ml-4 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/15</span>
+                    <span class="textito text-gray-400 float-right md:ml-10 lg:mr-0 md:mr-6 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1">Campus Levi Sasso</span>
+                    <div id="comentario" class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[13px] mt-2">
+                        <span id="comentarioTexto">Me encontré un gato solo saliendo de la U. Se llama pansito</span>
+                        <input type="text" id="comentarioInput" class="hidden w-full mb-2" disabled/>
+                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                            <button id="guardar" class="hidden focus:outline-none" onclick="guardarCambios()">
+                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi_Color.png?raw=true" alt="Enviar">
+                            </button>
+                            <div class="absolute bg-white border rounded -ml-5 w-[8rem] p-1" x-show="open" @click.away="open = false">
+                                <p>Guardar cambios</p>
+                            </div>
+                        </div>
+                        <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
+                            <button id="cancelar" class="hidden focus:outline-none" onclick="cancelarEdicion()">
+                                <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o_Color.png?raw=true" alt="Cancelar">
+                            </button>
+                            <div class="absolute bg-white border rounded p-1" x-show="open" @click.away="open = false">
+                                <p>Cancelar</p>
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <a href="/src/Publicacion.html">
                     <div class="flex justify-center mt-5 mb-5">
                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/image-7.png?raw=true" class="xl:max-h-[370px] xl:max-w-[490px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
                     </div>
@@ -270,7 +295,7 @@
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/edit%20pub.png?raw=true">
                         </button>
                         <div class="absolute bg-white border rounded -mt-3 -ml-36" x-show="open" @click.away="open = false">
-                            <button class="block w-[11rem]">
+                            <button class="block w-[11rem]" onclick="editarComentario()">
                                 <a class="flex px-2 py-1 text-sm">
                                     <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Edit.png?raw=true" alt="" class="h-4 w-4 ml-2 mr-2">
                                     <p>Editar comentario</p>
@@ -287,7 +312,7 @@
                         <span class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 xl:ml-10 xl:mr-10 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">UsuarioPromedioFisc</span>
                         <span class="textito text-gray-400 ml-2 md:ml-4 lg:ml-2 xl:text-sm md:text-[14px] lg:text-[12px] text-[12px]">2024/01/13</span>
                         <span class="textito text-gray-400 float-right xl:text-sm lg:text-[12px] md:text-[14px] text-[12px] mt-1 xl:ml-10 xl:mr-10 lg:mr-0">Campus Levi Sasso</span>
-                        <p class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 mt-2 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[13px]">Me encontré a este pequeño en los senderos de la UTP. ¿No es lindo?</p>
+                        <p id="titulo" class="textito font-bold text-[#241111] md:ml-10 lg:ml-0 ml-6 mt-2 xl:ml-10 xl:mr-10 xl:text-sm lg:text-[12px] md:text-[14px] text-[13px]">Me encontré a este pequeño en los senderos de la UTP. ¿No es lindo?</p>
                     </div>
                     <div class="flex justify-center mt-5 mb-5">
                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Oso-Hormiguero.png?raw=true" class="xl:max-h-[370px] xl:max-w-[490px] lg:max-h-[370px] lg:max-w-[300px] md:max-h-[350px] md:max-w-[420px] max-h-[220px] max-w-[280px] md:min-h-[72] md:min-w-[72] rounded-lg">
