--- a/Front - Proyecto/src/Administrativo/Admin - Inicio.html
+++ b/Front - Proyecto/src/Administrativo/Admin - Inicio.html
@@ -426,5 +426,6 @@
     </div>
     <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
+    <script src="/src/index.js"></script>
 </body>
 </html>
