--- a/Front - Proyecto/src/Administrativo/VerificarBiologo.html
+++ b/Front - Proyecto/src/Administrativo/VerificarBiologo.html
@@ -131,7 +131,7 @@
             </a>
 
             <a href="VerificarBiologo.html" class="hover:bg-[#D7EFFF] bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Verificar biólogos</a>
-            <a href="#" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
+            <a href="Reportes_Admin.html" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Ver reportes</a>
             <a href="#" class="hover:bg-[#D7EFFF] md:p-1 p-2 md:px-4 rounded-[50px] mt-[5px] md:mt-0">Administrar página</a>
         </div>
         <hr class="">
@@ -220,12 +220,12 @@
             <div class="relative flex justify-center top-48 md:top-52 lg:top-40 xl:top-44">
                 <table class="w-[80%] lg:w-[90%] border border-gray-300 rounded-lg overflow-hidden">
                     <tbody>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
+                        <tr id="00001" class="solicitud-row border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
                             <td class="p-4">Charles Darwin</td>
-                            <td>Solicitud para ser biologo verificado uwu</td>
+                            <td> Solicitud para ser biologo verificado uwu</td>
                             <td>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button class="mt-2 ver-btn" onclick="showDetails()">
+                                    <button class="mt-2" onclick="showDetails('00001')">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
@@ -233,7 +233,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button  onclick="toggleEstado(this, 1)" class="aprobar">
+                                    <button id="00001-A" onclick="toggleEstado('00001-A', 'A')" data-fila-id="00001">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
@@ -241,7 +241,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button  onclick="toggleEstado(this, 0)" class="rechazar">
+                                    <button id="00001-R" onclick="toggleEstado('00001-R', 'R')" data-fila-id="00001">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-6" x-show="open" @click.away="open = false">
@@ -250,12 +250,12 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
+                        <tr id="00002" class="solicitud-row border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
                             <td class="p-4">Gregor Mendel</td>
                             <td>Solicitud para ser biologo verificado chi</td>
                             <td>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button class="mt-2 ver-btn" onclick="showDetails()">
+                                    <button class="mt-2" onclick="showDetails('00002')">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
@@ -263,7 +263,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button  onclick="toggleEstado(this, 1)" class="aprobar">
+                                    <button id="00002-A" onclick="toggleEstado('00002-A','A')" data-fila-id="00002">
                                         <img  src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
@@ -271,7 +271,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button  onclick="toggleEstado(this, 0)" class="rechazar">
+                                    <button id="00002-R" onclick="toggleEstado('00002-R','R')" data-fila-id="00002">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-6" x-show="open" @click.away="open = false">
@@ -280,12 +280,12 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
+                        <tr id="00003" class="solicitud-row border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
                             <td class="p-4">Galeno de Pergamo</td>
                             <td>Solicitud para ser biologo verificado chi</td>
                             <td>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button class="mt-2 ver-btn" onclick="showDetails()">
+                                    <button class="mt-2" onclick="showDetails('00003')">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">                  
@@ -293,7 +293,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button onclick="toggleEstado(this, 1)" class="aprobar">
+                                    <button id="00003-A" onclick="toggleEstado('00003-A','A')" data-fila-id="00003">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
@@ -301,7 +301,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button onclick="toggleEstado(this, 0)"  class="rechazar">
+                                    <button id="00003-R" onclick="toggleEstado('00003-R','R')" data-fila-id="00003">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-6 " x-show="open" @click.away="open = false">
@@ -310,12 +310,12 @@
                                 </div>
                             </td>
                         </tr>
-                        <tr class="border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
+                        <tr id="00004" class="solicitud-row border-y-2 hover:bg-[#7EBBAA] bg-[#FFFFFF]">
                             <td class="p-4">Hipocrates de Cos</td>
                             <td>Solicitud para ser biologo verificado chi</td>
                             <td>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button class="mt-2">
+                                    <button class="mt-2" onclick="showDetails('00004')">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Ver.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-[6px]" x-show="open" @click.away="open = false">
@@ -323,7 +323,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button onclick="toggleEstado(this, 1)" class="aprobar">
+                                    <button id="00004-A" onclick="toggleEstado('00004-A','A')" data-fila-id="00004">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-4" x-show="open" @click.away="open = false">
@@ -331,7 +331,7 @@
                                     </div>
                                 </div>
                                 <div class="relative inline-block" x-data="{ open: false }" @mouseenter="open = true" @mouseleave="open = false">
-                                    <button onclick="toggleEstado(this, 0)" class="rechazar">
+                                    <button id="00004-R" onclick="toggleEstado('00004-R','R')" data-fila-id="00004">
                                         <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true">
                                     </button>
                                     <div class="absolute bg-white border rounded -ml-6 overflow-visible z-50" x-show="open" @click.away="open = false">
@@ -346,15 +346,15 @@
             <div id="celu" class="flex items-center justify-center relative">
                 <div class="w-[80%] lg:w-[90%] bg-[#FFFFFF] rounded-lg hidden">
                     <div class="flex p-4 ml-3">
-                        <button onclick="Deshacer()" class="flex bg-[#D7EFFF] p-2 rounded-md">
+                        <button class="flex bg-[#D7EFFF] p-2 rounded-md" onclick="Deshacer()">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Regresar.png?raw=true" class="mr-1">
                             Regresar
                         </button>
-                        <button onclick="toggleEstado(this, 1)" class="aprobar flex bg-[#D7EFFF] ml-3 p-2 rounded-md">
+                        <button id="celu-00001-A" class="flex bg-[#D7EFFF] ml-3 p-2 rounded-md" onclick="toggleEstado('00001-A', 'A')" data-fila-id="00001">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Shi.png?raw=true" class="mr-1">
                             Aprobar
                         </button>
-                        <button onclick="toggleEstado(this, 0)" class="rechazar flex bg-[#D7EFFF] ml-3 p-2 rounded-md">
+                        <button id="celu-00001-R" class="flex bg-[#D7EFFF] ml-3 p-2 rounded-md" onclick="toggleEstado('00001-R', 'R')" data-fila-id="00001">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/%C3%91o.png?raw=true" class="h-5 w-5 mt-[3px] mr-1">
                             Rechazar
                         </button>
@@ -388,24 +388,24 @@
                     <span class="text-lg hidden lg:block"> Bandeja de entrada</span>
                 </div>
                 <div class="lg:ml-2 mt-[5px] lg:mt-2 w-full flex lg:block text-sm md:text-base justify-around md:justify-evenly lg:justify-normal">
-                    <a href="#" class="">
+                    <button id="botonRecibidas" onclick="filtrarSolicitudes('recibida')">
                         <div class=" ml-2 lg:ml-0 flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6rem] md:w-[7rem] lg:w-[12rem]">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Recibido.png?raw=true" alt="icono-recibido" class="w-[20px] h-[20px] mt-[2px]">
                             <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Recibido</p>
                         </div>
-                    </a>
-                    <a href="#" class="">
+                    </button>
+                    <button id="botonAprobadas" onclick="filtrarSolicitudes('aprobada')">
                         <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[6.5rem] md:w-[8rem] lg:w-[12rem] ml-4 md:ml-0">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Aprobado.png?raw=true" alt="icono-aprobado" class="w-[20px] h-[20px] mt-[2px]">
                             <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Aprobado</p>
                         </div>
-                    </a>
-                    <a href="#" class="">
+                    </button>
+                    <button id="botonDesaprobadas" onclick="filtrarSolicitudes('desaprobada')">
                         <div class="flex rounded-[50px] hover:bg-[#7EBBAA] lg:p-2 md:pl-3 pl-2 py-1 w-[8rem] md:w-[9.5rem] lg:w-[12rem] ml-2 md:ml-0">
                             <img src="https://github.com/saunpain/FloraFaunaUTP/blob/main/img/Desaprobado.png?raw=true" alt="icono-desaprobado" class="w-[20px] h-[20px] mt-[2px]">
                             <p class="ml-1 md:ml-2 lg:ml-3 mt-1 md:mt-0">Desaprobado</p>
                         </div>
-                    </a>
+                    </button>
                 </div>
             </div>
             <footer class="bg-[#276B58] rounded-lg text-white text-[10.8px] xl:mt-9 lg:mt-5 hidden lg:block">
@@ -429,6 +429,7 @@
         </section>                                                                  <!--xl:min-w-[54rem] para pantalla normal    lg:min-w-[20rem] lg:max-w-xl xl:min-w-[54rem] xl:max-w-[60rem] 2xl:min-w-[58rem]--> <!--lg:w-[25rem] xl:min-w-[42rem] 2xl:w-[60rem] md:w-[28rem]-->
     </div>
     <script src="index.js"></script>
+    <script src="/src/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/alpinejs@2.8.2/dist/alpine.min.js" defer></script>
 </body>
 </html>
